scrollbar plugin & vue router added (started  fixing  animation slide)

--- a/src/style.css
+++ b/src/style.css
@@ -3,9 +3,16 @@
 @tailwind components;
 @tailwind utilities;
 
+ @layer base {
+     body {
+         @apply scrollbar-thin scrollbar-thumb-white scrollbar-track-pink-500 scrollbar-thumb-rounded-full
+     }
+ }
+
 body {
     overflow-x: hidden;
 }
+
 
 /*:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
